--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcc 'AP'
 - !lcsh 'Short stories -- Periodicals'
 - !lcsh 'Poetry -- 20th century -- Periodicals'
+- GITenberg
 title: Ainslee's, Vol. 15, No. 5, June 1905
 url: http://www.gutenberg.org/ebooks/27864
